# Aufgabe_3-5

./: PÜ3_1_LoadingData.ipynb  README.md  ekgdata.py  main.py  person.py  power_curve.py  pyproject.toml  read_data.py  read_pandas.py
.streamlit/: config.toml
data/: person_db.json
