[project]
name = "Aufgabe_3-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mvalmci", email = "m.valenta@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
